@@ -2,3 +2,4 @@
 	.data
 exclude_sym:
 	.long	0
+	.common exclude_common, 4, 4
